--- a/resume/main/colors.sty
+++ b/resume/main/colors.sty
@@ -1,4 +1,4 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{colors}[2025/09/29]
+\ProvidesFile{colors.sty}[2025/09/29]
 \RequirePackage{xcolor}
 \definecolor{MidBlue}{RGB}{0,82,155}
