Remove leftover FA stubs and stray brace; clean & rebuild

--- a/resume/jb/colors.sty
+++ b/resume/jb/colors.sty
@@ -1,4 +1,5 @@
+% colors.sty (minimal, safe)
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesFile{colors.sty}[2025/09/29]
+\ProvidesFile{colors.sty}[2025/10/22 minimal palette]
 \RequirePackage{xcolor}
-\definecolor{MidBlue}{RGB}{0,82,155}
+\definecolor{MidBlue}{RGB}{0,83,155}
