Add inline ContactBlock; ensure FA+hyperref; remove manual Contact; rebuild

--- a/resume/main/Cover_Letter_Main.tex
+++ b/resume/main/Cover_Letter_Main.tex
@@ -9,7 +9,122 @@
 
 \titleformat{\section}{\large\scshape\raggedright\color{black}}{}{0em}{}[\vspace{0.25\baselineskip}{\color{MidBlue}\titlerule}\vspace{0.1\baselineskip}]
 \titlespacing*{\section}{0pt}{0.6\baselineskip}{0.35\baselineskip}
+% --- Inline Contact Block (FontAwesome5 + clickable links) ---
+\makeatletter
+\providecommand{\ContactBlock}{}
+\renewcommand{\ContactBlock}{%
+  {\Large \textbf{Aaron De Vries}}\par
+  {\color{MidBlue}\small
+  \faIcon{map-marker-alt}\, Homebush, NSW \quad\textbar\quad
+  \faIcon{phone}\, \href{tel:+61400375308}{0400 375 308} \quad\textbar\quad
+  \faIcon{envelope}\, \href{mailto:aarondevries@protonmail.com}{aarondevries@protonmail.com} \quad\textbar\quad
+  \faIcon[brands]{linkedin}\, \href{https://linkedin.com/in/aarondevriesdev}{linkedin.com/in/aarondevriesdev}%
+  }\par
+}
+\makeatother
+% --- End Inline Contact Block ---
 \begin{document}
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
+\ContactBlock
 \begin{flushright}
 Homebush, NSW \\
 19 September 2025
