Improve resume formatting: single summary, tighter spacing, 1-page layout
- Replace duplicate summary statements with single improved version
- Add ContactBlock macro with FontAwesome icons
- Optimize spacing (margins, bullets, sections) to fit on 1 page
- Maintain ATS compatibility with clean structure
- Update JB HiFi Burwood resume and cover letter

--- a/resume/jb/Resume_JBHiFi_Burwood_Blue_Final.tex
+++ b/resume/jb/Resume_JBHiFi_Burwood_Blue_Final.tex
@@ -1,15 +1,15 @@
 
 \documentclass[a4paper,10pt]{article}
-\usepackage[margin=1.1cm]{geometry}
+\usepackage[margin=1.0cm]{geometry}
 \setlength{\parindent}{0pt}
-\setlength{\parskip}{3pt}
+\setlength{\parskip}{2pt}
 \usepackage[T1]{fontenc}\usepackage{lmodern}\usepackage{microtype}
 \PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\usepackage{bookmark}
 \urlstyle{same}\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}\usepackage{fontawesome5}
 \input{colors.sty}
 
 \titleformat{\section}{\large\scshape\raggedright\color{black}}{}{0em}{}[\vspace{0.25\baselineskip}{\color{MidBlue}\titlerule}\vspace{0.1\baselineskip}]
-\titlespacing*{\section}{0pt}{0.6\baselineskip}{0.35\baselineskip}
+\titlespacing*{\section}{0pt}{0.55\baselineskip}{0.3\baselineskip}
 % --- Inline Contact Block (FontAwesome5 + clickable links) ---
 \makeatletter
 \providecommand{\ContactBlock}{}
@@ -26,113 +26,13 @@
 % --- End Inline Contact Block ---
 \begin{document}
 \ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
 
-Enthusiastic and motivated retail team member with a passion for technology, IT, entertainment, and delivering exceptional customer experiences.\\
-Passionate, customer-focused, and results-driven, offering extensive experience in retail sales, customer service, consumer electronics, IT, home entertainment, technology, and appliances.
+\section*{About Me}
+Passionate, customer-focused, and results-driven retail team member offering extensive experience in sales, customer service, consumer electronics, IT, entertainment, and appliances.
+
+
 \section*{Key Skills}
-\begin{itemize}
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
 \item Customer service and result-driven sales in consumer electronics and home entertainment
 \item POS system operation, cash handling, and high-volume transaction processing
 \item Merchandising, inventory management, stock receiving, and back-of-house processes
@@ -143,7 +43,7 @@ Passionate, customer-focused, and results-driven, offering extensive experience 
 \end{itemize}
 \section*{Retail Experience}
 \textbf{Retail Team Member} \textbar\ Dick Smith Electronics --- Burwood, NSW \hfill \textit{Nov 2012--Mar 2016}
-\begin{itemize}
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
 \item Delivered exceptional customer experiences in consumer electronics across pre-sale consultation, transaction processing, and post-sale support.
 \item Processed stock deliveries efficiently, following established store procedures and inventory management protocols.
 \item Handled sales floor operations including pricing, merchandising, and back-of-house tasks to enhance customer experience and brand presentation.
@@ -152,7 +52,7 @@ Passionate, customer-focused, and results-driven, offering extensive experience 
 \item Trained and mentored new team members, fostering teamwork and a high-performance culture.
 \end{itemize}
 \textbf{Retail Team Member} \textbar\ Big W --- Miranda, NSW \hfill \textit{Sep 2005--Jan 2012}
-\begin{itemize}
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
 \item Specialized in customer-facing retail sales and merchandising within home entertainment, technology, and appliances sectors.
 \item POS system operation, cash handling, and high-volume transaction processing
 \item Maintained pricing accuracy and efficient stock delivery processes, and proactively implemented loss prevention strategies to reduce shrinkage and protect store assets.
@@ -161,12 +61,12 @@ Passionate, customer-focused, and results-driven, offering extensive experience 
 \end{itemize}
 \section*{Other Professional Experience}
 \textbf{Senior Software Engineer} \textbar\ Avaloq --- Sydney, NSW \hfill \textit{Jul 2016--Nov 2024}
-\begin{itemize}
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
   \item Collaborated effectively in fast-paced, customer-focused teams; adapted to changing priorities.
   \item Applied problem-solving skills to support team goals and enhance customer satisfaction.
 \end{itemize}
 \textbf{Application \& Web Developer} \textbar\ Bond International Software --- Wollongong, NSW \hfill \textit{Aug 2014--Jun 2016}
-\begin{itemize}
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
   \item Partnered with clients to improve user experiences through technical solutions and support.
 \end{itemize}
 \section*{Education}
@@ -174,7 +74,7 @@ Passionate, customer-focused, and results-driven, offering extensive experience 
 Major: Software Engineering \& Enterprise Systems Development \\
 University of Technology Sydney, 2012
 \section*{Additional Information}
-\begin{itemize}
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
 \item Passionate about technology, music, gaming, and continuous learning.
 \item Available for immediate start. References available on request.
 \end{itemize}
