--- a/resume/main/Cover_Letter_Main.tex
+++ b/resume/main/Cover_Letter_Main.tex
@@ -25,111 +25,14 @@
 % --- End Inline Contact Block ---
 \begin{document}
 \ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
-\ContactBlock
+
+\section*{About Me}
+Passionate, customer-focused, and results-driven retail team member offering extensive experience in sales, customer service, consumer electronics, IT, entertainment, and appliances.
+
 \begin{flushright}
 Homebush, NSW \\
 19 September 2025
 \end{flushright}
-\ContactBlock
 
 \begin{flushright}
 Homebush, NSW \\
