Fix fontawesome5 package and correct Dick Smith location
- Update GitHub Actions workflow to install fontawesome5 package
- Fix Dick Smith location from Burwood to Roselands in JB Hi-Fi resume
- Add tlmgr package installation as fallback for missing LaTeX packages

--- a/resume/jb/Resume_JBHiFi_Burwood_Blue_Final.tex
+++ b/resume/jb/Resume_JBHiFi_Burwood_Blue_Final.tex
@@ -42,7 +42,7 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 \item Effective communication with enthusiasm and customer focus
 \end{itemize}
 \section*{Retail Experience}
-\textbf{Retail Team Member} \textbar\ Dick Smith Electronics --- Burwood, NSW \hfill \textit{Nov 2012--Mar 2016}
+\textbf{Retail Team Member} \textbar\ Dick Smith Electronics --- Roselands, NSW \hfill \textit{Nov 2012--Mar 2016}
 \begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
 \item Delivered exceptional customer experiences in consumer electronics across pre-sale consultation, transaction processing, and post-sale support.
 \item Processed stock deliveries efficiently, following established store procedures and inventory management protocols.
