--- a/resume/jb/Application_Pack_JBHiFi_Burwood_Blue_Final.tex
+++ b/resume/jb/Application_Pack_JBHiFi_Burwood_Blue_Final.tex
@@ -1,35 +1,2 @@
-
-% ===========================================
-% JB Hi-Fi Application Pack - Burwood - Blue Theme
-% ===========================================
-\documentclass[a4paper,10pt]{article}
-\usepackage[margin=1.1cm]{geometry}
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{3pt}
-\usepackage[T1]{fontenc}
-\usepackage{lmodern}
-\usepackage{microtype}
-\PassOptionsToPackage{hidelinks}{hyperref}
-\usepackage{hyperref}
-\usepackage{bookmark}
-\urlstyle{same}
-\usepackage{enumitem}
-\setlist[itemize]{topsep=2pt,itemsep=2pt,parsep=0pt,partopsep=0pt,leftmargin=1.2em}
-\usepackage{xcolor}
-\usepackage{titlesec}
-\usepackage{fontawesome5}
-%
-}
-\definecolor{DeepBlue}{HTML}{123262}
-\definecolor{MidBlue}{HTML}{204066}
-\titleformat{\section}
-  {\large\scshape\raggedright\color{black}}{}{0em}{}
-  [\vspace{0.25\baselineskip}{\color{DeepBlue}\titlerule}\vspace{0.1\baselineskip}]
-\titlespacing*{\section}{0pt}{0.6\baselineskip}{0.35\baselineskip}
-\begin{document}
-% ===== COVER LETTER =====
-\input{Cover_Letter_JBHiFi_Burwood_Blue_Final.tex}
-\newpage
-% ===== RESUME =====
-\input{Resume_JBHiFi_Burwood_Blue_Final.tex}
-\end{document}
+% JB-specific application pack remains JB-only
+\input{Resume_JBHiFi_Burwood_Blue_Final}
