Reorg: Make JB Application Pack import the default main resume

--- a/resume/jb/Application_Pack_JBHiFi_Burwood_Blue_Final.tex
+++ b/resume/jb/Application_Pack_JBHiFi_Burwood_Blue_Final.tex
@@ -1,2 +1,4 @@
-% JB-specific application pack remains JB-only
-\input{Resume_JBHiFi_Burwood_Blue_Final}
+% JB-specific application pack now imports the default main resume
+\input{../main/Resume_Main}
+
+% JB-specific extras below (cover letter, form answers, etc.) can be added here
