Fix colors.sty path for TGG and Rebel employer packs
- Update TGG and Rebel packs to use ../main/colors.sty
- Ensures LaTeX can find shared color definitions during build
- Fixes LaTeX Error: File colors.sty not found

--- a/resume/jb/Resume_JBHiFi_Burwood_Blue_Final.tex
+++ b/resume/jb/Resume_JBHiFi_Burwood_Blue_Final.tex
@@ -22,7 +22,7 @@
   \faIcon[brands]{linkedin}\, \href{https://linkedin.com/in/aarondevriesdev}{linkedin.com/in/aarondevriesdev}%
   }\par
 }
-\makeatother
+\makeatotherww
 % --- End Inline Contact Block ---
 \begin{document}
 \ContactBlock
