Restructure: Move colors.sty to shared dir and remove JB resume duplicate
- Create resume/shared/colors.sty as single source of truth
- Remove duplicate Resume_JBHiFi_Burwood_Blue_Final.tex (now in main)
- Update all includes to use ../shared/colors.sty
- Clean up JB folder to contain only JB-specific assets
- Update Makefile resource paths

--- a/resume/jb/Cover_Letter_JBHiFi_Burwood_Blue_Final.tex
+++ b/resume/jb/Cover_Letter_JBHiFi_Burwood_Blue_Final.tex
@@ -5,7 +5,7 @@
 \usepackage[T1]{fontenc}\usepackage{lmodern}
 \PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\urlstyle{same}
 \usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}\usepackage{fontawesome5}
-\input{colors.sty}
+\input{../shared/colors.sty}
 
 \titleformat{\section}{\large\scshape\raggedright\color{black}}{}{0em}{}[\vspace{0.25\baselineskip}{\color{MidBlue}\titlerule}\vspace{0.1\baselineskip}]
 \titlespacing*{\section}{0pt}{0.6\baselineskip}{0.35\baselineskip}
