--- a/resume/main/Cover_Letter_Main.tex
+++ b/resume/main/Cover_Letter_Main.tex
@@ -5,7 +5,7 @@
 \usepackage[T1]{fontenc}\usepackage{lmodern}
 \PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\urlstyle{same}
 \usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}\usepackage{fontawesome5}
-\input{colors.sty}
+\input{../shared/colors.sty}
 
 \titleformat{\section}{\large\scshape\raggedright\color{black}}{}{0em}{}[\vspace{0.25\baselineskip}{\color{MidBlue}\titlerule}\vspace{0.1\baselineskip}]
 \titlespacing*{\section}{0pt}{0.6\baselineskip}{0.35\baselineskip}
