--- a/resume/tgg/Cover_Letter_TGG.tex
+++ b/resume/tgg/Cover_Letter_TGG.tex
@@ -5,7 +5,7 @@
 \usepackage[T1]{fontenc}\usepackage{lmodern}\usepackage{microtype}
 \PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\usepackage{bookmark}
 \urlstyle{same}\usepackage{enumitem}\usepackage{xcolor}\usepackage{fontawesome5}
-\input{../main/colors.sty}
+\input{../shared/colors.sty}
 
 % --- Inline Contact Block (FontAwesome5 + clickable links) ---
 \makeatletter
