--- a/resume/main/Resume_Main.tex
+++ b/resume/main/Resume_Main.tex
@@ -1,13 +1,18 @@
 % Promoted from JB Blue to be the default main resume
 % Source: resume/jb/Resume_JBHiFi_Burwood_Blue_Final.tex
 \documentclass[a4paper,10pt]{article}
-\usepackage[margin=1.0cm]{geometry}
+\usepackage[margin=1.2cm,bottom=1.5cm]{geometry}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{2pt}
 \usepackage[T1]{fontenc}\usepackage{lmodern}\usepackage{microtype}
 \PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\usepackage{bookmark}
 \urlstyle{same}\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}\usepackage{fontawesome5}
-\input{../shared/colors.sty}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\fancyfoot[C]{\thepage}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}\input{../shared/colors.sty}
 
 \titleformat{\section}{\large\scshape\raggedright\color{black}}{}{0em}{}[\vspace{0.25\baselineskip}{\color{MidBlue}\titlerule}\vspace{0.1\baselineskip}]
 \titlespacing*{\section}{0pt}{0.55\baselineskip}{0.3\baselineskip}
@@ -33,7 +38,7 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 
 
 \section*{Key Skills}
-\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
 \item Customer service and result-driven sales in consumer electronics and home entertainment
 \item POS system operation, cash handling, and high-volume transaction processing
 \item Merchandising, inventory management, stock receiving, and back-of-house processes
@@ -44,7 +49,7 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 \end{itemize}
 \section*{Retail Experience}
 \textbf{Retail Team Member} \textbar\ Dick Smith Electronics --- Roselands, NSW \hfill \textit{Nov 2012--Mar 2016}
-\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
 \item Delivered exceptional customer experiences in consumer electronics across pre-sale consultation, transaction processing, and post-sale support.
 \item Processed stock deliveries efficiently, following established store procedures and inventory management protocols.
 \item Handled sales floor operations including pricing, merchandising, and back-of-house tasks to enhance customer experience and brand presentation.
@@ -53,7 +58,7 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 \item Trained and mentored new team members, fostering teamwork and a high-performance culture.
 \end{itemize}
 \textbf{Retail Team Member} \textbar\ Big W --- Miranda, NSW \hfill \textit{Sep 2005--Jan 2012}
-\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
 \item Specialized in customer-facing retail sales and merchandising within home entertainment, technology, and appliances sectors.
 \item POS system operation, cash handling, and high-volume transaction processing
 \item Maintained pricing accuracy and efficient stock delivery processes, and proactively implemented loss prevention strategies to reduce shrinkage and protect store assets.
@@ -62,12 +67,12 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 \end{itemize}
 \section*{Other Professional Experience}
 \textbf{Senior Software Engineer} \textbar\ Avaloq --- Sydney, NSW \hfill \textit{Jul 2016--Nov 2024}
-\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
   \item Collaborated effectively in fast-paced, customer-focused teams; adapted to changing priorities.
   \item Applied problem-solving skills to support team goals and enhance customer satisfaction.
 \end{itemize}
 \textbf{Application \& Web Developer} \textbar\ Bond International Software --- Wollongong, NSW \hfill \textit{Aug 2014--Jun 2016}
-\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
   \item Partnered with clients to improve user experiences through technical solutions and support.
 \end{itemize}
 \section*{Education}
@@ -75,7 +80,7 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 Major: Software Engineering \& Enterprise Systems Development \\
 University of Technology Sydney, 2012
 \section*{Additional Information}
-\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=2pt]
+\begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
 \item Passionate about technology, music, gaming, and continuous learning.
 \item Available for immediate start. References available on request.
 \end{itemize}
