Proper font configuration: eliminate warnings at source
- Create shared/fonts.sty with explicit font definitions
- Use Latin Modern fonts consistently
- Pre-configure FontAwesome5 paths where possible
- Use silence package to filter only cosmetic warnings
- Remove -silent flag from Makefile (no longer needed)
- Better than suppressing all output

--- a/resume/jb/Cover_Letter_JBHiFi_Burwood_Blue_Final.tex
+++ b/resume/jb/Cover_Letter_JBHiFi_Burwood_Blue_Final.tex
@@ -4,7 +4,7 @@
 \setlength{\parindent}{0pt}\setlength{\parskip}{3pt}
 \usepackage[T1]{fontenc}\usepackage{lmodern}
 \PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\urlstyle{same}
-\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}\usepackage{fontawesome5}
+\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}
 \input{../shared/colors.sty}
 
 \titleformat{\section}{\large\scshape\raggedright\color{black}}{}{0em}{}[\vspace{0.25\baselineskip}{\color{MidBlue}\titlerule}\vspace{0.1\baselineskip}]
