--- a/resume/main/Resume_Main.tex
+++ b/resume/main/Resume_Main.tex
@@ -4,9 +4,9 @@
 \usepackage[margin=1.2cm,bottom=1.5cm]{geometry}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{2pt}
-\usepackage[T1]{fontenc}\usepackage{lmodern}\usepackage{microtype}
+\input{../shared/fonts.sty}
 \PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\usepackage{bookmark}
-\urlstyle{same}\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}\usepackage{fontawesome5}
+\urlstyle{same}\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
