--- a/resume/main/Cover_Letter_Main.tex
+++ b/resume/main/Cover_Letter_Main.tex
@@ -4,7 +4,7 @@
 \setlength{\parindent}{0pt}\setlength{\parskip}{3pt}
 \usepackage[T1]{fontenc}\usepackage{lmodern}
 \PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\urlstyle{same}
-\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}\usepackage{fontawesome5}
+\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}
 \input{../shared/colors.sty}
 
 \titleformat{\section}{\large\scshape\raggedright\color{black}}{}{0em}{}[\vspace{0.25\baselineskip}{\color{MidBlue}\titlerule}\vspace{0.1\baselineskip}]
