--- a/resume/tgg/Cover_Letter_TGG.tex
+++ b/resume/tgg/Cover_Letter_TGG.tex
@@ -2,9 +2,9 @@
 \usepackage[margin=2.5cm]{geometry}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{8pt}
-\usepackage[T1]{fontenc}\usepackage{lmodern}\usepackage{microtype}
+\input{../shared/fonts.sty}
 \PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\usepackage{bookmark}
-\urlstyle{same}\usepackage{enumitem}\usepackage{xcolor}\usepackage{fontawesome5}
+\urlstyle{same}\usepackage{enumitem}\usepackage{xcolor}
 \input{../shared/colors.sty}
 
 % --- Inline Contact Block (FontAwesome5 + clickable links) ---
