Clean build: Suppress harmless FontAwesome font substitution warnings

--- a/resume/shared/fonts.sty
+++ b/resume/shared/fonts.sty
@@ -10,3 +10,5 @@
 \usepackage{silence}
 \WarningFilter{latex}{Font shape}
 \WarningFilter{fontspec}{Font feature 'Mapping=tex-text' is deprecated}
+\WarningFilter{latex}{Font shape.*fontawesomebrands0.*undefined}
+\WarningFilter{latex}{Some font shapes were not available}
