--- a/resume/tgg/Application_Pack_TGG.tex
+++ b/resume/tgg/Application_Pack_TGG.tex
@@ -1,4 +1,15 @@
-% TGG Application Pack: imports default main resume
-\input{../main/Resume_Main}
+% TGG Application Pack: Cover Letter + Resume
+\documentclass[a4paper,10pt]{article}
+\usepackage[margin=1.2cm,bottom=1.5cm]{geometry}
+\input{../shared/fonts.sty}
+\usepackage{pdfpages}
 
-% TGG-specific assets can be added/extended below
+\begin{document}
+
+% Include TGG-specific cover letter as first page
+\includepdf[pages=-]{Cover_Letter_TGG.pdf}
+
+% Include main resume as subsequent pages
+\includepdf[pages=-]{../main/Resume_Main.pdf}
+
+\end{document}
