--- a/resume/jb/Cover_Letter_JBHiFi_Burwood_Blue_Final.tex
+++ b/resume/jb/Cover_Letter_JBHiFi_Burwood_Blue_Final.tex
@@ -1,15 +1,20 @@
-
+% JB Hi-Fi specific cover letter
 \documentclass[a4paper,10pt]{article}
-\usepackage[margin=1.1cm]{geometry}
-\setlength{\parindent}{0pt}\setlength{\parskip}{3pt}
-\usepackage[T1]{fontenc}\usepackage{lmodern}
-\PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\urlstyle{same}
-\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}
+\usepackage[margin=1.2cm,bottom=1.5cm]{geometry}
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{6pt}
+\input{../shared/fonts.sty}
+\PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\usepackage{bookmark}
+\urlstyle{same}\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\fancyfoot[C]{\thepage}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
 \input{../shared/colors.sty}
 
-\titleformat{\section}{\large\scshape\raggedright\color{black}}{}{0em}{}[\vspace{0.25\baselineskip}{\color{MidBlue}\titlerule}\vspace{0.1\baselineskip}]
-\titlespacing*{\section}{0pt}{0.6\baselineskip}{0.35\baselineskip}
-% --- Inline Contact Block (FontAwesome5 + clickable links) ---
+% Contact Block
 \makeatletter
 \providecommand{\ContactBlock}{}
 \renewcommand{\ContactBlock}{%
@@ -22,32 +27,40 @@
   }\par
 }
 \makeatother
-% --- End Inline Contact Block ---
+
 \begin{document}
 \ContactBlock
 
-\section*{About Me}
-Passionate, customer-focused, and results-driven retail team member offering extensive experience in sales, customer service, consumer electronics, IT, entertainment, and appliances.
+\vspace{1em}
 
-\begin{flushright}
-Homebush, NSW \\
-19 September 2025
-\end{flushright}
+\today
 
-\begin{flushright}
-Homebush, NSW \\
-19 September 2025
-\end{flushright}
-Hiring Manager \\
-JB Hi-Fi Burwood \\\\[0.6\baselineskip]
-Dear Hiring Manager, \\\\[0.4\baselineskip]
-I'm excited to apply for the Retail Team Member role at JB Hi-Fi Burwood. With hands-on experience in consumer electronics at Dick Smith and Big W, I know how to deliver great service, run POS during busy trading, and maintain strong merchandising and stock standards.
-What excites me most is contributing to the opening of a brand-new JB Hi-Fi store. First impressions shape loyalty and reputation. I'm keen to help set a positive, customer-first culture from day one so Burwood customers immediately associate the new location with trusted service and expertise.
-I bring a mix of retail know-how and IT experience that makes me confident with tech. I've exceeded sales targets, solved customer problems, and built repeat business. My software engineering background sharpened my problem-solving and teamwork—ideal for fast-paced environments.
-Most importantly, I genuinely love technology, entertainment, gaming, and music—passions that match JB Hi-Fi's culture. I'd love to bring my energy to your new Burwood team and help build a strong foundation for lasting success.
-I look forward to hearing from you.
-\vspace{0.8\baselineskip}
-Sincerely, \\
+\vspace{1em}
+
+Dear JB Hi-Fi Burwood Team,
+
+I am writing to express my strong interest in retail positions at JB Hi-Fi Burwood, where I can leverage my extensive customer service experience and genuine passion for consumer electronics and technology.
+
+With over 7 years of retail experience at Dick Smith Electronics and Big W, I have developed strong skills specifically aligned with JB Hi-Fi's customer-focused environment. My background spans consumer electronics, home entertainment, gaming, and technology products across diverse customer groups.
+
+Key highlights that make me an excellent fit for JB Hi-Fi include:
+\begin{itemize}
+\item Exceptional customer service and result-driven sales in consumer electronics and entertainment
+\item Deep passion for technology, gaming, music, and home entertainment systems
+\item POS system operation, cash handling, and high-volume transaction processing
+\item Merchandising and inventory management in fast-paced retail environments
+\item Team collaboration, training, and mentoring experience
+\item Strong product knowledge and enthusiasm for helping customers find the right solutions
+\end{itemize}
+
+What excites me most about JB Hi-Fi is the opportunity to combine my retail expertise with my genuine enthusiasm for technology and entertainment. I stay current with the latest gaming trends, audio equipment, and consumer electronics, which enables me to provide knowledgeable recommendations and exceptional customer experiences.
+
+I am particularly drawn to JB Hi-Fi's customer-centric culture and would welcome the opportunity to contribute to your team's continued success. I am available for immediate start and would love to discuss how my experience and passion align with JB Hi-Fi's values.
+
+Thank you for considering my application. I look forward to hearing from you.
+
+Sincerely,
+
 Aaron De Vries
 
 \end{document}
