--- a/resume/main/Application_Pack_Main.tex
+++ b/resume/main/Application_Pack_Main.tex
@@ -1,2 +1,26 @@
-% Generic application pack for default resume build
-\input{Resume_Main}
+% Main application pack combining cover letter and resume
+\documentclass[a4paper,10pt]{article}
+\usepackage[margin=1.2cm,bottom=1.5cm]{geometry}
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{2pt}
+\input{../shared/fonts.sty}
+\PassOptionsToPackage{hidelinks}{hyperref}\usepackage{hyperref}\usepackage{bookmark}
+\urlstyle{same}\usepackage{enumitem}\usepackage{xcolor}\usepackage{titlesec}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\fancyfoot[C]{\thepage}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
+\input{../shared/colors.sty}
+\usepackage{pdfpages}
+
+\begin{document}
+
+% Include cover letter as first page
+\includepdf[pages=-]{Cover_Letter_Main.pdf}
+
+% Include resume as subsequent pages  
+\includepdf[pages=-]{Resume_Main.pdf}
+
+\end{document}
