--- a/resume/main/Resume_Main.tex
+++ b/resume/main/Resume_Main.tex
@@ -47,6 +47,7 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 \item Loss prevention and store security awareness
 \item Effective communication with enthusiasm and customer focus
 \end{itemize}
+\vspace{0.4em}
 \section*{Retail Experience}
 \textbf{Retail Team Member} \textbar\ Dick Smith Electronics --- Roselands, NSW \hfill \textit{Jan 2012--Mar 2016}
 \begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
@@ -56,7 +57,8 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 \item Set up and maintained promotional floor displays for key electronics brands to drive sales and highlight new products.
 \item Delivered tailored solutions in customer-facing roles, demonstrating strong communication skills with diverse customer groups.
 \item Trained and mentored new team members, fostering teamwork and a high-performance culture.
-\end{itemize}
+\end{itemize}\vspace{0.4em}
+\vspace{0.4em}
 \textbf{Retail Team Member} \textbar\ Big W --- Miranda, NSW \hfill \textit{Sep 2005--Jan 2012}
 \begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
 \item Specialized in customer-facing retail sales and merchandising within home entertainment, technology, and appliances sectors.
@@ -65,16 +67,19 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 \item Delivered exceptional customer service with enthusiasm and customer focus across diverse customer groups.
 \item Collaborated effectively with team members in fast-paced retail operations to ensure smooth store operations and support customer needs.
 \end{itemize}
+\vspace{0.4em}
 \section*{Other Professional Experience}
 \textbf{Senior Software Engineer} \textbar\ Avaloq --- Sydney, NSW \hfill \textit{Jul 2016--Nov 2024}
 \begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
   \item Collaborated effectively in fast-paced, customer-focused teams; adapted to changing priorities.
   \item Applied problem-solving skills to support team goals and enhance customer satisfaction.
 \end{itemize}
+\vspace{0.4em}
 \textbf{Application \& Web Developer} \textbar\ Bond International Software --- Wollongong, NSW \hfill \textit{Aug 2014--Jun 2016}
 \begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
   \item Partnered with clients to improve user experiences through technical solutions and support.
 \end{itemize}
+\vspace{0.4em}
 \section*{Education}
 \textbf{Bachelor of Computer Science} \\
 Major: Software Engineering \& Enterprise Systems Development \\
@@ -84,5 +89,6 @@ University of Technology Sydney, 2012
 \item Passionate about technology, music, gaming, and continuous learning.
 \item Available for immediate start. References available on request.
 \end{itemize}
+\vspace{0.4em}
 
 \end{document}
