Fix: Email to Gmail, Professional Summary, Dick Smith Jul 2014, ATS-labeled DOCX contact, single bullets

--- a/resume/main/Resume_Main.tex
+++ b/resume/main/Resume_Main.tex
@@ -24,7 +24,7 @@
   {\color{MidBlue}\small
   \faIcon{map-marker-alt}\, Homebush, NSW \quad\textbar\quad
   \faIcon{phone}\, \href{tel:+61400375308}{0400 375 308} \quad\textbar\quad
-  \faIcon{envelope}\, \href{mailto:aarondevries@protonmail.com}{aarondevries@protonmail.com} \quad\textbar\quad
+  \faIcon{envelope}\, \href{mailto:aaron.jp.devries@gmail.com}{aaron.jp.devries@gmail.com} \quad\textbar\quad
   \faIcon[brands]{linkedin}\, \href{https://linkedin.com/in/aarondevriesdev}{linkedin.com/in/aarondevriesdev}%
   }\par
 }
@@ -33,7 +33,7 @@
 \begin{document}
 \ContactBlock
 
-\section*{About Me}
+\section*{Professional Summary}
 Passionate, customer-focused, and results-driven retail team member offering extensive experience in sales, customer service, consumer electronics, IT, entertainment, and appliances.
 
 
@@ -49,7 +49,7 @@ Passionate, customer-focused, and results-driven retail team member offering ext
 \end{itemize}
 \vspace{0.4em}
 \section*{Retail Experience}
-\textbf{Retail Team Member} \textbar\ Dick Smith Electronics --- Roselands, NSW \hfill \textit{Jan 2012--Mar 2016}
+\textbf{Retail Team Member} \textbar\ Dick Smith Electronics --- Roselands, NSW \hfill \textit{Jan 2012--Jul 2014}
 \begin{itemize}[nosep,leftmargin=*,topsep=0pt,partopsep=0pt,itemsep=3pt]
 \item Delivered exceptional customer experiences in consumer electronics across pre-sale consultation, transaction processing, and post-sale support.
 \item Processed stock deliveries efficiently, following established store procedures and inventory management protocols.
