--- a/resume/rebel/Application_Pack_Rebel.tex
+++ b/resume/rebel/Application_Pack_Rebel.tex
@@ -7,9 +7,9 @@
 \begin{document}
 
 % Include Rebel-specific cover letter as first page
-\includepdf[pages=-]{Cover_Letter_Rebel.pdf}
+\includepdf[pages=-]{AaronDeVries_CoverLetter_RebelSport.pdf}
 
 % Include main resume as subsequent pages
-\includepdf[pages=-]{../main/Resume_Main.pdf}
+\includepdf[pages=-]{AaronDeVries_Resume.pdf}
 
 \end{document}
