--- a/resume/tgg/Application_Pack_TGG.tex
+++ b/resume/tgg/Application_Pack_TGG.tex
@@ -7,9 +7,9 @@
 \begin{document}
 
 % Include TGG-specific cover letter as first page
-\includepdf[pages=-]{Cover_Letter_TGG.pdf}
+\includepdf[pages=-]{AaronDeVries_CoverLetter_TheGoodGuys.pdf}
 
 % Include main resume as subsequent pages
-\includepdf[pages=-]{../main/Resume_Main.pdf}
+\includepdf[pages=-]{AaronDeVries_Resume.pdf}
 
 \end{document}
