fix: correct includepdf commands in application packs

--- a/resume/jb/Application_Pack_JBHiFi_Burwood_Blue_Final.tex
+++ b/resume/jb/Application_Pack_JBHiFi_Burwood_Blue_Final.tex
@@ -21,6 +21,7 @@
 \includepdf[pages=-]{AaronDeVries_CoverLetter_JBHiFi_Burwood.pdf}
 
 % Include main resume as subsequent pages
-\includepdf[pages=-]{AaronDeVries_Resume.pdf}
+#\includepdf[pages=-]{../main/AaronDeVries_Resume.pdf}
+\includepdf[pages=-]{../main/AaronDeVries_Resume.pdf}
 
 \end{document}
